hopefully fix latency compensation for abl_link
- send latency to abl_link's "offset"
- better label for latency slider
- autosave/recall latency setting
- git-ignore LATENCY and REC settings

--- a/.gitignore
+++ b/.gitignore
@@ -69,4 +69,6 @@ res/raw/ofdataresources.zip
 #bin/data/pd/data/*/*
 
 .gradle/*/taskArtifacts/*
+bin/data/pd/abs/LATENCY.xml
+bin/data/pd/abs/rec/REC.xml
 
